Fixed footer styling on mobile devices

--- a/static/styles/custom.css
+++ b/static/styles/custom.css
@@ -9912,7 +9912,8 @@ h3 {
 }
 footer {
   font-size: 0.8em;
-  padding-top: 2rem;
+  padding: 2rem 2rem 0rem;
+  text-align: center;
 }
 
 main {
